force-app/main/default/objects/Epworth_Questionnaire__c/Epworth_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Epworth Questionnaire</label>
    <nameField>
        <label>Epworth Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epworth Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>