force-app/main/default/objects/Epworth_Questionnaire__c/fields/Driving_And_Stopped__c.field-meta.xml
<CustomField>
    <fullName>Driving_And_Stopped__c</fullName>
    <label>Driving And Stopped</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>