force-app/main/default/objects/Epworth_Questionnaire__c/fields/DrivingAndStopped__c.field-meta.xml
<CustomField>
    <fullName>DrivingAndStopped__c</fullName>
    <label>DrivingAndStopped</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>