force-app/main/default/objects/Epworth_Questionnaire__c/fields/In_Car__c.field-meta.xml
<CustomField>
    <fullName>In_Car__c</fullName>
    <label>In Car</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>