force-app/main/default/objects/Epworth_Questionnaire__c/fields/InCar__c.field-meta.xml
<CustomField>
    <fullName>InCar__c</fullName>
    <label>InCar</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>