force-app/main/default/objects/Epworth_Questionnaire__c/fields/Lying_Down__c.field-meta.xml
<CustomField>
    <fullName>Lying_Down__c</fullName>
    <label>Lying Down</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>