force-app/main/default/objects/Epworth_Questionnaire__c/fields/LyingDown__c.field-meta.xml
<CustomField>
    <fullName>LyingDown__c</fullName>
    <label>LyingDown</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>