force-app/main/default/objects/Epworth_Questionnaire__c/fields/Sitting_After_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Sitting_After_Lunch__c</fullName>
    <label>Sitting After Lunch</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>