force-app/main/default/objects/Epworth_Questionnaire__c/fields/Sitting_And_Reading__c.field-meta.xml
<CustomField>
    <fullName>Sitting_And_Reading__c</fullName>
    <label>Sitting And Reading</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>