force-app/main/default/objects/Epworth_Questionnaire__c/fields/Sitting_In_Public__c.field-meta.xml
<CustomField>
    <fullName>Sitting_In_Public__c</fullName>
    <label>Sitting In Public</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>