force-app/main/default/objects/Epworth_Questionnaire__c/fields/SittingAfterLunch__c.field-meta.xml
<CustomField>
    <fullName>SittingAfterLunch__c</fullName>
    <label>SittingAfterLunch</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>