force-app/main/default/objects/Epworth_Questionnaire__c/fields/SittingAndReading__c.field-meta.xml
<CustomField>
    <fullName>SittingAndReading__c</fullName>
    <label>SittingAndReading</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>