force-app/main/default/objects/Epworth_Questionnaire__c/fields/SittingAndTalking__c.field-meta.xml
<CustomField>
    <fullName>SittingAndTalking__c</fullName>
    <label>SittingAndTalking</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>