force-app/main/default/objects/Epworth_Questionnaire__c/fields/SittingInPublic__c.field-meta.xml
<CustomField>
    <fullName>SittingInPublic__c</fullName>
    <label>SittingInPublic</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>