force-app/main/default/objects/Epworth_Questionnaire__c/fields/Sleep_Referral__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sleep Referral</label>
    <referenceTo>Sleep_Referral__c</referenceTo>
    <relationshipLabel>Epworth Questionnaires</relationshipLabel>
    <relationshipName>Epworth_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>