force-app/main/default/objects/Epworth_Questionnaire__c/fields/Watching_TV__c.field-meta.xml
<CustomField>
    <fullName>Watching_TV__c</fullName>
    <label>Watching TV</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>