force-app/main/default/objects/Epworth_Questionnaire__c/fields/WatchingTV__c.field-meta.xml
<CustomField>
    <fullName>WatchingTV__c</fullName>
    <label>WatchingTV</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>